# wagtail-scenario-test

./: .claude  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/commands/: add-tests.md  atomic-check.md  feasibility.md  implement.md  research.md  review.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  latest-check.yml  publish-dev.yml  publish.yml
src/wagtail_scenario_test/: __init__.py
src/wagtail_scenario_test/fixtures/: __init__.py
src/wagtail_scenario_test/page_objects/: __init__.py  base.py  facade.py  wagtail_admin.py
src/wagtail_scenario_test/utils/: __init__.py  factories.py  video.py
tests/: conftest.py  settings.py  test_base_page.py  test_facade.py  test_fixtures.py  test_imports.py  test_snippet_admin.py  test_video.py  test_wagtail_admin.py  urls.py
tests/e2e/: test_e2e.py  test_e2e_all_blocks.py  test_e2e_base_page.py  test_e2e_page_admin.py  test_e2e_snippet.py  test_e2e_streamfield.py  test_e2e_wagtail_admin.py
tests/testapp/: __init__.py  models.py
tests/testapp/migrations/: 0001_initial.py  0002_streamfieldpage.py  0003_advancedstreamfieldpage.py  0004_alter_advancedstreamfieldpage_body.py  0005_alter_advancedstreamfieldpage_body.py  0006_alter_advancedstreamfieldpage_body.py  0007_allblocktypespage.py
tests/testapp/templates/testapp/: test_page.html
tests/unit/: test_facade.py  test_factories.py  test_fixtures.py  test_page_admin.py  test_snippet_admin.py  test_streamfield_helper.py  test_wagtail_admin.py
