[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-scenario-test"
version = "0.1.0"
description = "E2E scenario testing framework for Wagtail applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "kkm-horikawa" },
]
keywords = [
    "wagtail",
    "testing",
    "e2e",
    "playwright",
    "scenario",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Wagtail",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "wagtail>=5.0",
    "django>=4.2",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-playwright>=0.6.2",
    "factory-boy>=3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-cov>=6.0",
]

[project.urls]
Homepage = "https://github.com/kkm-horikawa/wagtail-scenario-test"
Documentation = "https://github.com/kkm-horikawa/wagtail-scenario-test#readme"
Repository = "https://github.com/kkm-horikawa/wagtail-scenario-test"
Issues = "https://github.com/kkm-horikawa/wagtail-scenario-test/issues"

[project.entry-points.pytest11]
wagtail_scenario_test = "wagtail_scenario_test.fixtures"

[tool.hatch.build.targets.wheel]
packages = ["src/wagtail_scenario_test"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
    "e2e: mark test as end-to-end test (requires browser)",
    "slow: mark test as slow-running",
]

[tool.coverage.run]
source = ["src/wagtail_scenario_test"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
# Coverage is ~66% due to:
# - Unit tests use mocks (verify API contract, not implementation)
# - E2E tests exercise real code but only for critical paths
# - "Missing" lines are method bodies covered by mock assertions
fail_under = 60
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
